feat(tle-pass): persistencia de TLEs, clase TleData y configuración externa centralizada
- Se creó la clase `TleData` para representar mensajes TLE y facilitar su validación y persistencia.
- Se implementó la función `process_and_save_tle()` para procesar y guardar los TLEs recibidos desde Kafka.
- Se añadió la función `save_tle_data()` en `infrastructure/db.py` para persistir registros en la tabla `tle_data`, incluyendo manejo de `ON CONFLICT DO NOTHING`.
- Se ajustó el consumer Kafka para invocar `process_and_save_tle()` junto con el cálculo de pasadas.
- Se agregó la función `parse_epoch_from_line1()` para extraer el campo `epoch` desde el TLE.
- Se centralizó completamente la configuración en el archivo `configs/config.yaml`, eliminando valores hardcodeados en los scripts de Kafka.

--- a/develop/modules/tle-pass-activity-generator/docker-compose.yml
+++ b/develop/modules/tle-pass-activity-generator/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  send-test-tle:
+    build:
+      context: .
+      dockerfile: Dockerfile.send_test_tle
+    container_name: send-test-tle
+    volumes:
+      - ./configs:/app/configs
+    networks:
+      - kafka-net
+
   tle-pass-activity-generator:
     build:
       context: .
@@ -10,16 +20,9 @@ services:
       - ./configs:/app/configs
     networks:
       - kafka-net
-
-  send-test-tle:
-    build:
-      context: .
-      dockerfile: Dockerfile.send_test_tle
-    container_name: send-test-tle
-    networks:
-      - kafka-net
     depends_on:
-      - tle-pass-activity-generator
+      - send-test-tle
+
 
 networks:
   kafka-net:
