feat(tle-pass): separar lógica de consumer Kafka, agregar logger y centralizar configuración
- Se separó la lógica del consumer Kafka y se trasladó a un orquestador (`application/orchestrator.py`) para mejorar la organización y mantenibilidad.
- Se implementó un objeto logger centralizado para manejo uniforme de logs en el módulo.
- Se centralizó la configuración de la base de datos y Kafka en un archivo externo `configs/config.yaml`, eliminando valores hardcodeados.
- El consumer ahora consume mensajes y delega el procesamiento al orquestador, que maneja persistencia y cálculo de pasadas.

--- a/develop/modules/tle-pass-activity-generator/docker-compose.yml
+++ b/develop/modules/tle-pass-activity-generator/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - PYTHONUNBUFFERED=1
     volumes:
       - ./configs:/app/configs
+      - ./logs:/app/logs
     networks:
       - kafka-net
     depends_on:
