--- a/develop/modules/viasat-antenna-adapter/src/configs/default_config.yaml
+++ b/develop/modules/viasat-antenna-adapter/src/configs/default_config.yaml
@@ -9,6 +9,7 @@ files:
   tle_status_filename: "importEphem_PLANNER_LOAD.txt"
   planning_load_filename: "rciSched_PLANNER_LOAD.txt"
   planning_status_filename: "importSched_PLANNER_LOAD.txt"
+  accept_string: "ACCEPTED"
 send:
   sleep_time: 60
   connection_method: "direct" # / tunnel / double_tunnel
