--- a/develop/modules/spacetrack-tle-producer/src/configs/config.json
+++ b/develop/modules/spacetrack-tle-producer/src/configs/config.json
@@ -37,5 +37,12 @@
         "rotation": 5,
         "size": 5000000,
         "debug_mode": true
+    },
+    "database":{
+        "dbname": "planificacion_satelital",
+        "user": "planificador_app",
+        "password": "SecurePassword123!",
+        "host": "satplan_db",
+        "port": "5432"
     }
 }
