--- a/develop/common/PostgreSQL/docker-compose.yml
+++ b/develop/common/PostgreSQL/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       POSTGRES_USER: planificador_app
       POSTGRES_PASSWORD: SecurePassword123!
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
-      - /home/iambrosino/SIGAE/PostgreSQL/deepseek_sql_.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
@@ -18,3 +18,11 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - kafka-net
+volumes:
+  pgdata: 
+  
+networks:
+  kafka-net:
+    external: true
