--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
-        "./develop/modules/spacetrack-tle-producer/src/get_tle_from_api/DAL_tle"
+        "./develop/modules/spacetrack-tle-producer/src/get_tle_from_api/DAL_tle",
+        "./develop/modules/spacetrack-tle-producer/src/get_tle_from_api"
     ]
 }
