--- a/develop/common/PostgreSQL/docker-compose.yml
+++ b/develop/common/PostgreSQL/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: SecurePassword123!
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./deepseek_sql_.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
