--- a/develop/modules/viasat-antenna-adapter/src/config/default_config.yaml
+++ b/develop/modules/viasat-antenna-adapter/src/config/default_config.yaml
@@ -1,5 +1,6 @@
 app:
   antenna_id: "ANTENA_DEFAULT" # Nombre de la unidad
+  send_ack: false # Envia o no mensajes ACK por el topico, como respuesta a la planificacion.
   chequeo: false # Solo acepta TLEs de satelites planificados y solo acepta planificacion que tenga presente el TLE
   freshness_hours_tle: 48 # 48 hs para validar que un tle este actualizado o no (freshness)
   minutes_min_to_load: 5 # Tiempo en minutos minimo antes de ejecutarse una pasada para cargar una nueva tarea
@@ -7,6 +8,10 @@ app:
     tle_type: "TLE"
     plan_type: "PLANN"
     plan_tle_type: "PLANNTLE"
+  actions:
+    add: "ADD"
+    purge: "PURGE"
+    delete: "DELETE"
 send:
   connection_method: "direct" # / tunnel / double_tunnel
   sleep_time: 10 # Espera por la respuesta de la antena
@@ -30,8 +35,15 @@ kafka:
   auto_offset_reset: "earliest" # / latest -> Si se quieren consultar todos o solamente los nuevos mensajes entrantes
   enable_auto_commit: false # Se realiza el commit manualmente al finalizar de procesar el mensaje
   topic: ["TLE","PLANN"]
+  ack_topic: "ACK"
   waiting_time: 30
   max_retries: 5
+  ack_scheme_file: "/app/config/schema_ack.json"
+  enable_idempotence: true
+  acks: "all"
+  retries: 5
+  max_in_flight_requests_per_connection': 5,
+
 logs:
   folder: "logs"
   filename: "PostTLE.log"
